<resources>
    <!-- Application name-->
    <string name="app_name" translatable="false">Mapper</string>
    <string name="title_activity_maps" translatable="false">Mapper</string>
    <string name="action_settings">Setting</string>
    <string name="navigation">Navigation</string>
    <string name="trackRoute">Tracking</string>
    <string name="clearRoute">Clear route</string>
    <string name="clearTrack">Clear track</string>
    <!--<string name="clearHistory">Clear history</string>-->
    <string name="language">Language</string>
    <string name="theme" translatable="false">Theme</string>
    <string name="defaultTheme" translatable="false">Default</string>
    <string name="retroTheme" translatable="false">Retro</string>
    <string name="nightTheme" translatable="false">Night</string>
    <string name="saveSettings">Save</string>
    <string name="start">Start</string>
    <string name="tracking">Start tracking</string>
    <string name="showPolyline">Show tracking line</string>
    <string name="exit">Exit</string>
    <string name="exit_text">Exit application?</string>
    <string name="trackingName">Tracking name</string>
    <string name="editTrackingName">Edit name</string>
    <string name="history">History</string>
    <string name="loadingRoute">Loading route, please wait</string>
    <string name="error">Error</string>
    <string name="somethingGoesWrong">Can\'t find route to destination</string>
    <string name="searchTextView">Route history</string>
    <string name="dateBetween">Search between start and end date</string>
    <string name="dateStart">start date</string>
    <string name="dateEnd">end date</string>
    <string name="routeNameSearch">Search by name</string>
    <string name="routeNameText">route name</string>
    <string name="searchButtonText">Search</string>
    <string name="resultText">Search result</string>
    <string name="editTrackTitle">Edit title</string>

    <string-array name="languageList">
        <item>English</item>
        <item>Serbian</item>
        <item>Hungarian</item>
    </string-array>
</resources>
