<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ivan.vts.mapper.tracking.TrackingActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/constraintLayout">

        <android.support.constraint.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.80" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/saveSettings"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginBottom="8dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintHorizontal_bias="0.972" />

        <Switch
            android:id="@+id/polyline"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/tracking"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginBottom="0dp"
            app:layout_constraintVertical_bias="0.0"
            android:gravity="right|center"
            app:layout_constraintBottom_toTopOf="@+id/save"
            android:layout_marginLeft="8dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0" />

        <TextView
            android:id="@+id/textPolyline"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/showPolyline"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:gravity="left|center"
            android:textSize="15sp"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textTracking" />

        <Switch
            android:id="@+id/tracking"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:layout_marginEnd="16dp"
            android:layout_marginRight="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintTop_toTopOf="parent"
            android:gravity="right|center"
            android:layout_marginLeft="0dp"
            app:layout_constraintLeft_toLeftOf="@+id/guideline"
            app:layout_constraintHorizontal_bias="1.0" />

        <TextView
            android:id="@+id/textTracking"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text="@string/tracking"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="16dp"
            app:layout_constraintRight_toLeftOf="@+id/guideline"
            android:layout_marginRight="8dp"
            app:layout_constraintHorizontal_bias="0.0"
            android:gravity="left|center"
            android:textSize="15sp"/>

        <TextView
            android:id="@+id/trackingName"
            android:layout_width="wrap_content"
            android:text="Name of track"
            android:layout_marginTop="16dp"
            android:layout_height="60dp"
            app:layout_constraintTop_toBottomOf="@+id/textPolyline"
            android:layout_marginBottom="16dp"
            app:layout_constraintBottom_toTopOf="@+id/save"
            app:layout_constraintVertical_bias="0.0"
            android:layout_marginLeft="16dp"
            app:layout_constraintLeft_toLeftOf="parent"
            android:gravity="left|center"
            android:textSize="15sp" />

        <TextView
            android:id="@+id/routeTrackingName"
            android:layout_width="wrap_content"
            android:layout_height="60dp"
            android:text=""
            android:layout_marginRight="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintRight_toRightOf="parent"
            android:onClick="editTrackName"
            app:layout_constraintLeft_toRightOf="@+id/trackingName"
            android:layout_marginLeft="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textPolyline"
            app:layout_constraintHorizontal_bias="0.515"
            app:layout_constraintBottom_toTopOf="@+id/save"
            android:clickable="true"
            android:gravity="start|center"/>

    </android.support.constraint.ConstraintLayout>
</ScrollView>
